welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: '=>' expected but 'return' found.
	case 0 return 10:00;
               ^alarmClock:6: error: '=>' expected but 'return' found.
	case 1 return 7:00;
               ^alarmClock:7: error: '=>' expected but 'return' found.
	case 2 return 7:00;
               ^alarmClock:8: error: '=>' expected but 'return' found.
	case 3 return 7:00;
               ^alarmClock:9: error: '=>' expected but 'return' found.
	case 4 return 7:00; 
               ^alarmClock:10: error: '=>' expected but 'return' found.
	case 5 return 7:00; 
               ^alarmClock:11: error: '=>' expected but 'return' found.
	case 6 return 10:00;
               ^